[project]
name = "anaplan-audit-history"
version = "4.0.0.dev0"
description = "Fetch Anaplan audit history and load it into an Anaplan Reporting Model"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Anaplan OEG" }]
readme = "README.md"

dependencies = [
    "httpx[http2]>=0.28",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "typer>=0.15",
    "rich>=13.9",
    "pandas>=2.2",
    "pyjwt>=2.10",
    "cryptography>=44.0",
    "pytz>=2024.2",
    "duckdb>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "mypy>=1.13",
    "ruff>=0.8",
    "pandas-stubs>=2.2",
    "pyinstaller>=6.11",
]

[project.scripts]
anaplan-audit = "anaplan_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anaplan_audit"]

[tool.hatch.build.targets.editable]
mode = "compat"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ANN"]
ignore = ["N815", "ANN401"]

[tool.mypy]
strict = true
python_version = "3.13"
packages = ["anaplan_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=anaplan_audit --cov-report=term-missing"
